Set Up Your Account fix Promo Code add wrap div.promo-content

--- a/src/style/pages/login.less
+++ b/src/style/pages/login.less
@@ -527,7 +527,10 @@ a:hover {
       }
 
       .registration-sidebar-content {
-
+        .promo-content {
+          margin: 40px 25px;
+        }
+        
         .payment-content {
           margin: 40px 25px;
 
